src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color:  rgb(167, 35, 211);
  min-height: 22vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
  text-align: center
}

.App-link {
  color: #c0c0c0;
}
.container{
  display: flex;
  flex-direction: row;
  flex-grow: 1;
  width: 100vw
}
.row {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  width: 100%;
  background-color: rgb(224, 239, 246);
  align-items: center;
  justify-content: space-between;
  flex-basis: 0;
  flex-grow: 1; 
  height: 100%;
}
.column {
  display: flex;
  margin: 0px;
  flex-direction: column;
  flex-basis: 100%;
  align-items: flex-start;
  padding: 1rem;
  background-color: purple;
}

.border1{
  border: 1px solid red;

}
.border2{
  border: 1px solid blue;
}
@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

